fixed spacing

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
     font-family: 'Bitter', serif;
     color:white;
-    font-size:26px;
+    font-size:20px;
     
 }
 
@@ -18,29 +18,35 @@ body {
 }
 
 .container {
-    width:600px;
+    width:500px;
     border-radius:25px;
-    height:600px;
+    height:700px;
     align-items:center;
     display:flex;
     border:5px solid white;
     flex-direction:column;
+    justify-content:space-between;
+    gap:5px;
 }
 
 .calculatorLabel {
     margin-top:10px;
-    height:fit-content;
+    height:40xp;
     width:fit-content;
 }
 
 .resultsContainer {
     border:1px solid white;
     border-radius:15px;
-    width:500px;
+    width:400px;
     display:flex;
     justify-content:flex-end;
+    align-items:center;
     padding-right:50px;
     margin-top:25px;
+    overflow: hidden;   
+    white-space: nowrap; 
+    text-overflow: ellipsis;
 } 
 
 .numberContainer {
@@ -48,21 +54,32 @@ body {
     flex-direction:row;
     flex-wrap:wrap;
     justify-content:space-between;
-    gap:20px;
-    margin-top:20px;
-    
+    gap:30px;
+    margin-top:10px;
+    margin-bottom:20px;
+    padding:20px;
 }
 
 .numberContainer button {
-    width:130px;
-    height:80px;
     background-color:transparent;
+    width:80px;
+    padding:10px;
     border-radius:10px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
     border-radius:15px;
-    margin-left:20px;
-    margin-right:20px;
 }
 
+#delete {
+    width:290px;
+}
+
+#zero {
+    width:210px;
+}
+
+#result {
+    overflow:hidden;
+    height:1em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    line-height:26px;
+}
